force-app/main/default/objects/QA_Strategy__c/QA_Strategy__c.object-meta.xml
<CustomObject>
    <description>Quality Assurance Fortnightly Strategy Form</description>
    <label>QA Strategy</label>
    <nameField>
        <displayFormat>QASF-{YYYYMM}-{0000}</displayFormat>
        <label>QA Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Strategy</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>