force-app/main/default/objects/QA_Strategy__c/fields/Call_Average__c.field-meta.xml
<CustomField>
    <fullName>Call_Average__c</fullName>
    <formula>Sum_of_Call_Scores__c  /  Number_of_Calls__c</formula>
    <label>Call Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>