force-app/main/default/objects/QA_Strategy__c/fields/Call_Opening__c.field-meta.xml
<CustomField>
    <fullName>Call_Opening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Opening</label>
    <type>Checkbox</type>
</CustomField>