force-app/main/default/objects/QA_Strategy__c/fields/Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Experience</label>
    <type>Checkbox</type>
</CustomField>