force-app/main/default/objects/QA_Strategy__c/fields/Data_Integrity__c.field-meta.xml
<CustomField>
    <fullName>Data_Integrity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Integrity</label>
    <type>Checkbox</type>
</CustomField>