force-app/main/default/objects/QA_Strategy__c/fields/NI_or_SS__c.field-meta.xml
<CustomField>
    <fullName>NI_or_SS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Need Identification / Selling Skills</inlineHelpText>
    <label>NI or SS</label>
    <type>Checkbox</type>
</CustomField>