force-app/main/default/objects/QA_Strategy__c/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <label>Number of Calls Audited</label>
    <summaryFilterItems>
        <field>QualityAssurance__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Call</value>
    </summaryFilterItems>
    <summaryForeignKey>QualityAssurance__c.QASF_Review_Form__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>