force-app/main/default/objects/QA_Strategy__c/fields/Objection_Handling__c.field-meta.xml
<CustomField>
    <fullName>Objection_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Objection Handling</label>
    <type>Checkbox</type>
</CustomField>