force-app/main/default/objects/QA_Strategy__c/fields/PMI__c.field-meta.xml
<CustomField>
    <fullName>PMI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Product, Market &amp; Industry Knowledge</inlineHelpText>
    <label>PMI</label>
    <type>Checkbox</type>
</CustomField>