force-app/main/default/objects/QA_Strategy__c/fields/Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Completed</label>
    <type>Checkbox</type>
</CustomField>