force-app/main/default/objects/QA_Strategy__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Factors where the individual does well and meets the competencies</inlineHelpText>
    <label>Strengths</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>