force-app/main/default/objects/QA_Strategy__c/fields/Sum_of_Call_Scores__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Call_Scores__c</fullName>
    <label>Sum of Call Scores</label>
    <summarizedField>QualityAssurance__c.Call_Score__c</summarizedField>
    <summaryFilterItems>
        <field>QualityAssurance__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Call</value>
    </summaryFilterItems>
    <summaryForeignKey>QualityAssurance__c.QASF_Review_Form__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>