force-app/main/default/objects/QA_Strategy__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Factors that are out of our control but we should be aware of these</inlineHelpText>
    <label>Threats</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>