force-app/main/default/objects/QA_Strategy__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Factors that need to be worked on by the individual</inlineHelpText>
    <label>Weaknesses</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>